--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "prepare": "npx @puppeteer/browsers install chromedriver@stable",
         "start": "`find chromedriver -name chromedriver -type file` --port=4444 &",
         "stop": "kill `lsof -t -i:4444`",
-        "test": "npm install && npm start && npm run test:webwebview && npm stop",
+        "test": "npm install && node bin/testserver.mjs",
+        "test:old": "npm install && npm start && npm run test:webwebview && npm stop",
         "test:webwebview": "(cd ../highcharts_flutter_webwebview/example/ && flutter drive -d chrome --driver=test_driver/integration_test.dart --target=integration_test/webview_flutter_test.dart)"
     }
 }
