--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
         "@puppeteer/browsers": "^2.10.2"
     },
     "scripts": {
+        "clean": "rm -rf chromedriver",
         "prepare": "npx @puppeteer/browsers install chromedriver@stable",
-        "start": "`find chromedriver -name chromedriver -type file` --port=4444 &",
-        "stop": "kill `lsof -t -i:4444`",
-        "test": "npm install && node bin/testserver.mjs",
-        "test:old": "npm install && npm start && npm run test:webwebview && npm stop",
-        "test:webwebview": "(cd ../highcharts_flutter_webwebview/example/ && flutter drive -d chrome --driver=test_driver/integration_test.dart --target=integration_test/webview_flutter_test.dart)"
+        "test": "npm run clean && npm install && node bin/testserver.mjs"
     }
 }
